--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
     vertical-align: middle;
     display: table-cell;
     margin:auto;
-    border:  1px black  solid;
+    box-shadow: 0px 0px 5px 5px rgb(158, 158, 158); 
  
 
     display: flex;
@@ -42,7 +42,25 @@
     flex-direction: column;  
     align-items: center;   
  
-    width: 40%;
+    width: 20%;
+    background: rgb(231, 231, 231);
+    
+}
+
+#scoreboard{
+    padding: 30px;
+    font-size: 1.5rem;    
+    vertical-align: middle;
+    display: table-cell;
+    margin: 50px auto 0px auto;
+    box-shadow: 0px 0px 5px 5px rgb(158, 158, 158); 
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;  
+    align-items: center;   
+ 
+    width: 280px;
     background: rgb(231, 231, 231);
     
 }
